<resources>
    <string name="app_name">Todo list</string>
    <string name="label_name">Tasks</string>
    <string name="task_name">Task name</string>
    <string name="important_task">Important task</string>
    <string name="search">Search</string>
    <string name="sort">Sort</string>
    <string name="sort_by_name">Sort by name</string>
    <string name="sort_by_date">Sort by date created</string>
    <string name="hide_completed">Hide completed</string>
    <string name="delete_all_completed">Delete all completed</string>
</resources>