<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView"/>

    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_sort"
        android:title="@string/sort"
        app:showAsAction="always">

        <menu>

            <item
                android:id="@+id/action_sort_by_name"
                android:title="@string/sort_by_name"/>

            <item
                android:id="@+id/action_sort_by_date"
                android:title="@string/sort_by_date"/>

        </menu>

    </item>

    <item
        android:id="@+id/action_hide_complete_task"
        android:title="@string/hide_completed"
        android:checkable="true"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_delete_all_completed_task"
        android:title="@string/delete_all_completed"
        android:checkable="true"
        app:showAsAction="never"/>


</menu>